PLD: hr lines separating sections and avoid breaks on print view, closes #100

--- a/libya_tally/apps/tally/static/css/default.css
+++ b/libya_tally/apps/tally/static/css/default.css
@@ -173,7 +173,7 @@ table.print-table{
 }
 
 table.print-table td {
-    padding: 10px;
+    padding: 10px 6px;
 }
 table.print-table td h4 {
     margin-top: 0;
